--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>Enre em contato pelo email lucas@gmail.com</p>
+    <p>Entre em contato pelo email lucas@gmail.com</p>
 </body>
 </html>
