--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>Entre em contato pelo email lucas@email.com</p>
+    <p>Entre em contato pelo e-mail lucas@gmail.com</p>
 </body>
 </html>
